Module-02/WordPress-in-Kubernetes/wordpress-manual.yaml
apiVersion: v1
kind: Pod
metadata:
  name: wordpress-manual
spec:
  containers:
  - image: wordpress:4.8-apache
    name: wordpress-frontend
    ports:
    - containerPort: 8080
      protocol: TCP
