Module-02/WordPress-in-Kubernetes/mysql-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress-mysql
  labels:
    app: wordpress
spec:
  ports:
    - port: 3306
  selector:
    # Note that these match the "labels" in MySQL
    app: wordpress
    tier: mysql
