Module-02/WordPress-in-Kubernetes/wp-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress-frontend
  labels:
    app: wordpress
spec:
  ports:
    - port: 80
  selector:
    # Note that these match the "labels" in MySQL
    app: wordpress
    tier: frontend
