Module-02/WordPress-in-Kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wp-ingress
#  annotations:
#    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: localhost
    http:
      paths:
        - path: /
          backend:
            serviceName: wordpress-frontend
            servicePort: 80
